--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "antd": "^5.14.1",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-player": "^2.14.1",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -51,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "react-router-dom": "^6.22.0"
   }
 }
