--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-material-ui-carousel": "^3.4.2",
     "react-player": "^2.14.1",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
