--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-player": "^2.14.1",
     "react-scripts": "^5.0.1",
+    "react-spring-3d-carousel": "^1.3.4",
+    "swiper": "^11.0.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
