--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-material-ui-carousel": "^3.4.2",
+    "react-phone-number-input": "^3.3.9",
     "react-player": "^2.14.1",
     "react-scripts": "^5.0.1",
     "react-spring-3d-carousel": "^1.3.4",
