--- a/package.json
+++ b/package.json
@@ -18,15 +18,21 @@
     "antd": "^5.14.1",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
+    "history": "^5.3.0",
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
+    "react-ga4": "^2.1.0",
+    "react-gtm-module": "^2.0.11",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-phone-number-input": "^3.3.9",
+    "react-router-sitemap": "^1.2.0",
     "react-scripts": "^5.0.1",
+    "sitemap": "^7.1.1",
     "swiper": "^11.0.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -57,6 +63,7 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
+    "@types/react-gtm-module": "^2.0.3",
     "react-router-dom": "^6.22.0"
   }
 }
