--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
+    "@rive-app/react-canvas": "^4.8.4",
     "@supabase/supabase-js": "^2.39.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -29,6 +30,7 @@
     "react-gtm-module": "^2.0.11",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.1",
     "react-phone-number-input": "^3.3.9",
     "react-router-sitemap": "^1.2.0",
     "react-scripts": "^5.0.1",
