--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "history": "^5.3.0",
     "jquery": "^3.7.1",
     "leaflet": "^1.9.4",
+    "leaflet-curve": "^1.0.0",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
