--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-ga4": "^2.1.0",
     "react-gtm-module": "^2.0.11",
     "react-hot-toast": "^2.4.1",
+    "react-html5-camera-photo": "^1.5.11",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.1",
     "react-leaflet": "^4.2.1",
@@ -70,6 +71,7 @@
     "@types/aos": "^3.0.7",
     "@types/leaflet": "^1.9.9",
     "@types/react-gtm-module": "^2.0.3",
+    "@types/react-html5-camera-photo": "^1.5.3",
     "react-router-dom": "^6.22.0"
   }
 }
