--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@mui/x-date-pickers": "^7.2.0",
+    "@reach/combobox": "^0.18.0",
+    "@react-google-maps/api": "^2.19.3",
     "@rive-app/react-canvas": "^4.8.4",
     "@supabase/supabase-js": "^2.39.5",
     "@testing-library/jest-dom": "^5.17.0",
@@ -42,6 +44,7 @@
     "sitemap": "^7.1.1",
     "swiper": "^11.0.7",
     "typescript": "^4.9.5",
+    "use-places-autocomplete": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
