--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mapbox/polyline": "^1.2.1",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@mui/x-date-pickers": "^7.2.0",
@@ -22,6 +23,7 @@
     "antd": "^5.14.1",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
+    "google-polyline": "^1.0.3",
     "history": "^5.3.0",
     "jquery": "^3.7.1",
     "leaflet": "^1.9.4",
@@ -74,6 +76,7 @@
   "devDependencies": {
     "@types/aos": "^3.0.7",
     "@types/leaflet": "^1.9.9",
+    "@types/mapbox__polyline": "^1.0.5",
     "@types/react-gtm-module": "^2.0.3",
     "@types/react-html5-camera-photo": "^1.5.3",
     "react-router-dom": "^6.22.0"
