--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
+    "react-camera-pro": "^1.3.0",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
     "react-ga4": "^2.1.0",
