--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@types/mapbox__polyline": "^1.0.5",
     "@types/react-gtm-module": "^2.0.3",
     "@types/react-html5-camera-photo": "^1.5.3",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "supabase": "^1.163.2"
   }
 }
