--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@mapbox/polyline": "^1.2.1",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
@@ -17,6 +18,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/google.maps": "^3.55.7",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.80",
     "@types/react": "^18.2.55",
@@ -34,6 +36,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-camera-pro": "^1.3.0",
+    "react-datetime": "^3.2.0",
+    "react-datetime-picker": "^5.6.0",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
     "react-ga4": "^2.1.0",
