--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.1",
     "react-leaflet": "^4.2.1",
+    "react-number-format": "^5.4.0",
     "react-phone-number-input": "^3.3.9",
     "react-router-sitemap": "^1.2.0",
     "react-scripts": "^5.0.1",
